# sql_generator

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/app/: prompt_templates.yaml  vector_rag_config.yaml
configs/trino/catalog/: mongodb.properties  postgresql.properties  starrocks.properties
scripts/: generate_data.py  generate_pairs.py
src/app/: api.py  bootstrap.py  dto_models.py  main.py  settings.py
src/database/: crawler.py  db_manager.py  schema_db.py  trinodb.py
src/llm/: llm_client.py  models.py  prompting.py  sql_generator.py
src/logging/: log_manager.py
src/utils/: search.py
tests/: conftest.py
tests/helpers/: docker_helper.py  kafka.py  models.py  ollama.py  schema_registry.py  zookeeper.py
tests/unit/: test_schema_registry.py
tests/unit/app/: test_app.py
tests/unit/database/: test_crawler.py
tests/unit/llm/: test_llm_client.py
